fixed z-index of indicators

--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -631,6 +631,7 @@ iframe .biencommun .full-width.carousel-container .carousel.hero-banner .carouse
 
 .fondations .full-width.carousel-container .carousel.hero-banner.scrollable.carousel-vertical .carousel-slide-indicators {
   position: fixed;
+  z-index: 1;
 }
 
 .fondations .full-width.carousel-container .carousel.hero-banner.scrollable .carousel-slides-container {
@@ -662,7 +663,7 @@ iframe .biencommun .full-width.carousel-container .carousel.hero-banner .carouse
   width: 100%;
   height: 100%;
   opacity: .8;
-  z-index: 4;
+  z-index: 1;
   top: 0;
   left: 0;
   transition: all 3s ease-in-out;
